fixed margin error on mobile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -160,6 +160,11 @@ aside {
   margin-right: 48px;
 }
 
+.navbar
+.nav {
+  margin-right: 0;
+}
+
 .navigation {
   padding-left: 18%;
   padding-right: 18%;
